# rag-py

./: .dockerignore  .env  Dockerfile  README.md  fly.toml  main.py  modal_app.py  process_techs.py  pyproject.toml  pytest.ini
data/docs/page_chunks.lance/_transactions/: 0-e61261be-9b27-4dfc-b441-47dd92df0e66.txn  1-3f343745-cc31-45c0-b057-c96feac0daf4.txn  10-f4b9666b-a10a-4f01-a7d7-368ba52c2ac9.txn  100-6c1d32bb-595f-4d07-b032-1c654f48b4bc.txn  1000-13bba977-36b3-4e97-98ff-221f24fcf06f.txn  1001-8420bac0-5a1d-403a-9f8e-20461e616a54.txn  1002-7b0bd4f9-a45f-4a6b-9b36-8c12c184fc69.txn  1003-5a3daa94-de35-41d6-bef7-ec9975b3f40c.txn  1004-3429b4b1-cbf7-4db4-80bb-4ad44c43ee34.txn  1005-5c5c403d-b300-4332-adf2-0b829e835072.txn  1006-3fa37daa-c63f-4c63-8269-590935531603.txn  1007-bc28bcdf-16d5-4b45-823a-c996a79b90a3.txn  1008-4a8a59ef-3c5f-43a3-a7a1-c6f5cb89654e.txn  1009-cd24b6d6-6aa3-4581-a6a7-351188fce4b7.txn  101-673ab310-d429-4693-9481-b941cf770e22.txn  1010-813a7406-6590-4b13-a270-98bdfe228f8d.txn  1011-bd2e1e6d-2a18-46cd-b446-79043d299a1d.txn  1012-df86e59c-4dd0-450a-b5e9-53b47f678e7f.txn  1013-2410603f-8bc9-428c-b5fe-e3cca118fe4b.txn  1014-8abcf181-e359-49cc-aca2-342b667bdd30.txn  1015-624e6002-8988-44f8-a534-2d251f90b4a0.txn  1016-226d7ef2-894e-493d-88ec-8c2aa7e1d667.txn  1017-10bbe8b9-e50b-4a9f-9ad2-eff2641c070b.txn  (+5211 more)
routers/: api.py  model.py
techs/: nextjs.py  zod.py
tests/: markdown_chunker_test.py  markdown_embedder_test.py  next_app_15_1_2_test.py  zod_3_24_1_test.py
utils/: dspy_lm.py  lance.py  markdown_chunker.py  markdown_embedder.py  utils.py
(+13182 files in other folders)
